api,disk: add filesystem endpoints
